<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chapter02</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="c02_b1">无标题菜单关闭</string>
    <string name="c02_b2">Intent意图跳转</string>
    <string name="c02_b3">活动的生命周期</string>
    <string name="c02_b4">活动的启动模式</string>
    
    <string name="b1_toast">Toast</string>
    <string name="b1_finish">销毁活动</string>
    <string name="b1_add">添加</string>
    <string name="b1_remove">删除</string>
    
    <string name="b2_b1">普通跳转</string>
    <string name="b2_b2">自定义action</string>
    <string name="b2_b3">自定义category</string>
    <string name="b2_b4">隐式uri</string>
    <string name="b2_b5">配置data</string>
    <string name="b2_b6">隐式tel跳转拨号</string>
    <string name="b2_b7">Extra传递值</string>
    <string name="b2_b8">ForResult返回值</string>
	<string name="intent_skip">Intent跳转页面</string>
	<string name="intent_data">配置data跳转</string>
	<string name="intent_result">返回数据给上级页面</string>
	<string name="b3_normal">正常模式的</string>
	<string name="b3_dialog">对话框模式</string>
	<string name="b4_b1">standard</string>
	<string name="b4_b2">singleTop</string>
	<string name="b4_b3">singleTask</string>
	<string name="b4_b4">singleInstance</string>
	<string name="start_one">one</string>
	<string name="start_two">two</string>
	<string name="start_three">three</string>
</resources>
